Fix number conversion lint warnings