@@ -107,7 +107,7 @@ public class FileFilterUtil {
           + "] should match [" + lastFileName + "]");
     }
     String counterAsStr = m.group(1);
-    return new Integer(counterAsStr).intValue();
+    return Integer.valueOf(counterAsStr);
   }
 
   public static String slashify(String in) {
